<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dn"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="10sp"

        android:background="@color/purple_700"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="302dp"
        android:layout_gravity="center"
        android:src="@drawable/dn1"

        ></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tk"
            android:textSize="20sp"
            android:textColor="@color/black"
            >

        </TextView>
        <EditText
            android:id="@+id/tk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mk"
            android:textSize="20sp"
            android:textColor="@color/black"
            >

        </TextView>
        <EditText
            android:id="@+id/mk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        >

        <Button
            android:id="@+id/dn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dn"
            android:textSize="20sp"
            android:cursorVisible="true"
            android:textColor="@color/black"
            >

        </Button>
        <Button
            android:id="@+id/thoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:cursorVisible="true"
            android:layout_gravity="center"
            >

        </Button>
    </LinearLayout>

</LinearLayout>