<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroud1"
    tools:context=".MainActivity_Dangnhap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="40sp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <ImageButton

                android:id="@+id/kho"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:src="@drawable/kho"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kho"
                android:textSize="20sp"
                android:textColor="@color/black">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp">

            <ImageButton
                android:id="@+id/vattu"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:src="@drawable/vattu"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vattu"
                android:textSize="20sp"
                android:textColor="@color/black">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="200sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp">

            <ImageButton
                android:id="@+id/phieunhap"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:src="@drawable/phieunhap"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phieunhap"
                android:textSize="20sp"
                android:textColor="@color/black">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp">

            <ImageButton
                android:id="@+id/ctpn"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:src="@drawable/ctphieunhap"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ctphieunhap"
                android:textSize="20sp"
                android:textColor="@color/black">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCC"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50sp"
            android:text="Trang chủ"
            android:textSize="15sp">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="Tài khoản"
            android:textSize="15sp">

        </Button>
    </LinearLayout>

</LinearLayout>